--- a/main.html
+++ b/main.html
@@ -6,6 +6,46 @@
 </head>
 <body>
     <!--    Write your code here -->
+	<div class="table-responsive container">
+		<caption class="caption-top">List of all transaction</caption>
+		<table class="table  table-hover" >
+			<thead class ="table-dark">
+				<tr>
+					<th>#</th>
+					<th>From</th>
+					<th>To</th>
+					<th>Amount($)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td class="fw-bold">1</td>
+					<td>Mark</td>
+					<td>Otto</td>
+					<td>1000</td>
+				</tr>
+				<tr>
+					<td class="fw-bold">2</td>
+					<td>Jacob</td>
+					<td>Thorton</td>
+					<td>1500</td>
+				</tr>
+				<tr>
+					<td class="fw-bold">3</td>
+					<td>Jack</td>
+					<td>John</td>
+					<td>2000</td>
+				</tr>
+					
+			</tbody>
+			<tfoot class="table-light">
+				<tr>
+					<td id="total" colspan="3" class="text-end fw-bold font-monoscope">Total</td>
+					<td class="fw-bold">4000</td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
